--- a/taowu/common/pom.xml
+++ b/taowu/common/pom.xml
@@ -95,6 +95,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <scope>provided</scope>
+        </dependency>
+<!--        redisson-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.13.6</version>
+            <scope>provided</scope>
         </dependency>
         <!--json处理-->
         <dependency>
