--- a/taowu/cart-service/pom.xml
+++ b/taowu/cart-service/pom.xml
@@ -76,6 +76,11 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-okhttp</artifactId>
         </dependency>
+        <!--Redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!--AMQP依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
