--- a/taowu/trade-service/pom.xml
+++ b/taowu/trade-service/pom.xml
@@ -84,6 +84,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <!--Redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!--Spring整合Rabbit依赖-->
         <dependency>
             <groupId>org.springframework.amqp</groupId>
